--- a/tampilkan.html
+++ b/tampilkan.html
@@ -131,7 +131,8 @@
     // Daftar file HTML di proyek
     const links = [
       { name: "Produk Run Saat Ini", file: "gabung/index.html" },
-      { name: "Sortir ID Produk", file: "sortir/v3.html" },
+      { name: "Sortir ID Produk", file: "gabung/v5.html" },
+      { name: "Sortir ID Toko", file: "gabung/v4.html" },
       { name: "Laporan Kendala", file: "lapor/index.html" },
       { name: "Ambil URL Affiliate", file: "read/geturl.html" },
       { name: "Total Komisi Affiliate", file: "read/totalkomisi.html" },
